@@ -1,3 +1,7 @@
+Mon Oct 13 02:34:22 CEST 2008  John Tytgat  <John.Tytgat@aaug.net>
+
+	* pthread/_exit.s(__pthread_exit): Simplify code.
+
 Mon Oct 13 02:19:00 CEST 2008  John Tytgat  <John.Tytgat@aaug.net>
 
 	* gen-auto.pl: Fix typo.
